--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "next": "15.5.3",
     "next-theme": "^0.1.5",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "shadcn": "^3.3.1",
     "tailwind-merge": "^3.3.1"
   },
